# rmux

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
npm/: README.md  install.js  install.test.js  package.json
scripts/: smoke-detach-attach.sh
src/: ipc.rs  main.rs  model.rs  protocol.rs  render.rs
